--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/webcamjs/1.0.26/webcam.js"></script>
 
    <link rel="stylesheet" href="style.css">
-  
+   <script src="//unpkg.com/ml5@0.4.3/dist/ml5.min.js" target="_blank"></script>
   </head>
 
   <body>
@@ -45,7 +45,7 @@ water bottle
 
       <p style="font-size: 22px;">Object : <span id="result_object_name"></span> </p>
       <p style="font-size: 22px;">Accuracy : <span id="result_object_accuracy"></span> </p>
-    </center>
+</center>
 
   </div>
 <script src="main.js"></script>
